force-app/main/default/objects/LLC_BI__Authorized_User__c/LLC_BI__Authorized_User__c.object-meta.xml
<CustomObject>
    <label>Authorized User</label>
    <nameField>
        <displayFormat>AU-{00000000}</displayFormat>
        <label>Authorized User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>