force-app/main/default/objects/LLC_BI__Authorized_User__c/fields/LLC_BI__Contact_for_Exception_Images_and_Conting__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact_for_Exception_Images_and_Conting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact for Exception Images and Conting</label>
    <type>Checkbox</type>
</CustomField>