force-app/main/default/objects/LLC_BI__Authorized_User__c/fields/LLC_BI__Contact_for_Exception_Pricing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact_for_Exception_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact for Exception Pricing and Contingency Procedures</description>
    <label>Contact for Exception Pricing</label>
    <type>Checkbox</type>
</CustomField>