force-app/main/default/objects/LLC_BI__Authorized_User__c/fields/LLC_BI__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact_Name__c</fullName>
    <defaultValue>$User.FirstName +  &apos; &apos; + $User.LastName</defaultValue>
    <description>--DEPRECATED--
The authorized user&apos;s contact name.</description>
    <label>-D Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>