force-app/main/default/objects/LLC_BI__Authorized_User__c/fields/LLC_BI__Contact_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Reference</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authorized User</relationshipLabel>
    <relationshipName>Authorized_User</relationshipName>
    <type>Lookup</type>
</CustomField>