force-app/main/default/objects/LLC_BI__Authorized_User__c/fields/LLC_BI__Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact_Title__c</fullName>
    <defaultValue>$User.Title</defaultValue>
    <description>--DEPRECATED--
The authorized user&apos;s contact&apos;s title.</description>
    <label>-D Contact Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>