force-app/main/default/objects/LLC_BI__Authorized_User__c/fields/LLC_BI__Treasury_Service_Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service_Product__c</fullName>
    <formula>LLC_BI__Treasury_Service__r.LLC_BI__Product_Reference__r.Name</formula>
    <label>Treasury Service Product</label>
    <type>Text</type>
</CustomField>